--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.0.0",
+    "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
     "near-api-js": "^0.44.2",
     "react": "^17.0.2",
